--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
+  awesome_notifications: ^0.8.2
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
@@ -65,7 +67,6 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
