--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
   awesome_notifications: ^0.8.2
+  http: ^1.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
