--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_fonts: ^6.2.1
   awesome_notifications: ^0.8.2
   http: ^1.2.2
+  image_picker: ^0.8.7+4
 
 
   # The following adds the Cupertino Icons font to your application.
