--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,16 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
   awesome_notifications: ^0.8.2
+  http: ^1.2.2
+  image_picker: ^0.8.7+4
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_rating_bar: ^4.0.1
+  flutter_dotenv: ^5.2.1
+  shared_preferences: ^2.3.5
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
@@ -74,6 +78,7 @@ flutter:
   assets:
     - Images/
     - assets/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
