--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   google_fonts: ^6.2.1
   awesome_notifications: ^0.8.2
   http: ^1.2.2
+  dio: ^5.7.0
+  path_provider: ^2.1.5
+  url_launcher: ^6.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
