--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_rating_bar: ^4.0.1
+  flutter_secure_storage: ^9.2.3
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
@@ -77,16 +78,12 @@ flutter:
   - Images/light stick.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-<<<<<<< HEAD
   - Images/Logo.png
   - Images/contohproduk.png
   - Images/Bintang.png
   - Images/ProfilePicSeller.png
-=======
-  assets:
-    - Images/
-    - assets/
->>>>>>> origin/Faqih-1302220086
+  - Images/
+  - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
