--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,15 @@ dependencies:
   awesome_notifications: ^0.8.2
   http: ^1.2.2
   image_picker: ^0.8.7+4
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_rating_bar: ^4.0.1
   flutter_dotenv: ^5.2.1
   shared_preferences: ^2.3.5
+  mime: ^1.0.6
+  file_picker: ^8.1.7
+  http_parser: ^4.0.2
+  permission_handler: ^11.3.1
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
